code style refactoring

--- a/src/app/shared/components/bd-checkbox/bd-checkbox.component.scss
+++ b/src/app/shared/components/bd-checkbox/bd-checkbox.component.scss
@@ -7,7 +7,7 @@
   height: 16px;
   border: $border;
   background: $white;
-  border-radius: 3px;
+  border-radius: $default-border-radius;
 
   .arrow {
     display: none;
