FSPA-327 if no value in inout field, clear icon should be hidden

--- a/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
+++ b/src/app/shared/components/filter-container/components/autocomplete-filter/autocomplete-filter.component.html
@@ -6,6 +6,7 @@
     placeholder="Enter data">
     <i
       bd-suffix
+      [hidden]="!isSearchMode"
       (click)="clearField($event)"
       class="icon-minus"
       aria-hidden="true">
