--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -33,7 +33,7 @@ form-navigation {
       span {
         margin: 0 5px;
         color: $dark-grey;
-        font-size: $small-font-size;
+        font-size: $tiny-font-size;
         cursor: default;
 
         &:hover {
