filter header item active color fix

--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -62,7 +62,9 @@ $filter-header-max-width: 85px;
           }
 
           &.active {
-            color: $active-color;
+            span {
+              color: $active-color;
+            }
           }
 
           span {
