--- a/src/app/customers/components/customer-card/customer-card.component.scss
+++ b/src/app/customers/components/customer-card/customer-card.component.scss
@@ -39,11 +39,11 @@
     .left {
       span {
         display: flex;
-        width: 34px;
-        height: 34px;
+        width: 28px;
+        height: 28px;
         background: $black;
         color: $white;
-        margin-top: -6px;
+        font-size: $mini-font-size;
         border-radius: 50%;
         justify-content: center;
         align-items: center;
@@ -112,8 +112,8 @@
 
       .status-text {
         position: absolute;
-        right: 17px;
-        bottom: -8px;
+        right: 22px;
+        bottom: 0;
       }
 
       .status {
@@ -121,7 +121,7 @@
         right: 0;
         width: 12px;
         height: 12px;
-        bottom: -5px;
+        bottom: 3px;
         border-radius: $form-control-height;
       }
     }
