FSPA-138 #comment code refactoring

--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -17,7 +17,7 @@
   <div class="driver-type">
     <span>{{driverType}}</span>
   </div>
-  <div class="changes">{{equipmentNotificationDate | date:'MM/dd'}}</div>
+  <div class="changes">{{this.equipment.equipmentNotification?.date | date:'MM/dd'}}</div>
   </div>
   <div class="right">
       <div class="tr-city">
