--- a/src/app/auth/forms/register-form/register-form.component.scss
+++ b/src/app/auth/forms/register-form/register-form.component.scss
@@ -16,7 +16,9 @@
     min-height: 20px;
   }
 
-  .bd-switch-container .bd-switch-label {
-    display: none;
+  .bd-switch-container {
+    .bd-switch-label {
+      display: none;
+    }
   }
 }
