--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -17,6 +17,7 @@ $light-blue: #f5fefe;
 $serenity: #f5f9fc;
 $red: #fc3b3b;
 $light-red: #ffebeb;
+$dark-blue: #3d454d;
 
 /*  */
 $text-color: $black;
