--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -3,7 +3,7 @@
     <h3 class="text-center">Log In</h3>
     <bd-login-form [viewMode]="formViewMode"></bd-login-form>
     <div class="links-wrapper text-center">
-      <a [routerLink]="['/register/step1']">Register</a>
+      <a [routerLink]="['/register']">Register</a>
       <a href="#">Forgot Password</a>
     </div>
   </div>
