--- a/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
@@ -3,8 +3,8 @@
    <div>
     <span>{{trip.driver.firstName}} {{trip.driver.lastName}}</span>
     |
-    <span>Tk{{trip.truckNumber}}</span>
+    <span>Tk{{trip.truckEquipment.number}}</span>
     |
-    <span>TI{{trip.trailerNumber}}</span>
+    <span>TI{{trip.trailerEquipment.number}}</span>
    </div>
 </div>
