--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -9,7 +9,7 @@
              [class.bd-hidden-label]="!isEmptyLabel">
           <label
             class="bd-input-placeholder"
-            for="customer-input-id">
+            for="company-input-id">
               {{labelText}}
           </label>
         </div>
