--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -3,7 +3,7 @@
     <div class="data-panel">
       <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
       </bd-button>
-      <customer-cards [selected]="selected" (select)='onSelect($event)' [customers]="items"></customer-cards>
+      <company-cards [selected]="selected" (select)='onSelect($event)' [companies]="items"></company-cards>
     </div>
   </first-pane>
   <second-pane>
