--- a/src/app/companies/companies.component.scss
+++ b/src/app/companies/companies.component.scss
@@ -1,7 +1,7 @@
 @import '../../assets/styles/variables';
 @import '../../assets/styles/styles';
 
-customer-form {
+company-form {
   display: block;
   height: 100%;
 }
