--- a/src/app/companies/components/company-card/company-card.component.scss
+++ b/src/app/companies/components/company-card/company-card.component.scss
@@ -9,13 +9,13 @@
   }
 
   &.active {
-    .customer-card-section {
+    .company-card-section {
       border-bottom-color: $blue;
     }
   }
 }
 
-.customer-card-section {
+.company-card-section {
   position: relative;
   height: 100px;
   padding: $default-margin;
@@ -88,7 +88,7 @@
     .left {
       overflow: hidden;
 
-      .customer-name {
+      .company-name {
         overflow: hidden;
         font-weight: bold;
         text-overflow: ellipsis;
