--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -1,5 +1,5 @@
 <template #customItemTemplate let-model="item" let-index="index">
-    <div class="dropdown-customer-item-wrapper">
+    <div class="dropdown-company-item-wrapper">
       <div class="full-properties-wrapper">
         <div class="name-title">
           {{model.name}}
@@ -15,68 +15,68 @@
   <bd-form-section labelText="Info">
     <bd-input class="bd-form-control" [labelText]="'System Load Number'" [disabled]="true" formControlName="systemLoadNumber">
     </bd-input>
-    <bd-input class="bd-form-control" [labelText]="'Customer Load Number'" formControlName="customerLoadNumber">
+    <bd-input class="bd-form-control" [labelText]="'Company Load Number'" formControlName="companyLoadNumber">
     </bd-input>
     <bd-form-switch class="bd-form-control" [labelText]="'Load Type'" [enableButtonSwitch]="isEditMode" formControlName="type" [items]="loadTypesNames">
     </bd-form-switch>
     <bd-form-switch class="bd-form-control" [labelText]="'Freight'" [enableButtonSwitch]="isEditMode" formControlName="freightType" [items]="freightTypesNames">
     </bd-form-switch>
   </bd-form-section>
-  <navigation-anchor id="customer"></navigation-anchor>
-  <bd-form-section labelText="Customer">
-    <bd-validator [component]="loadForm.controls.customer" [errorDefs]="{required: 'Customer is required'}">
+  <navigation-anchor id="company"></navigation-anchor>
+  <bd-form-section labelText="Company">
+    <bd-validator [component]="loadForm.controls.company" [errorDefs]="{required: 'Company is required'}">
       <bd-typeahead
         class="bd-form-control"
-        formControlName="customer"
+        formControlName="company"
         [labelText]="'Name or MC#'"
-        [footerButtonText]="'Add New Customer'"
-        [source]="customerSource"
-        (onRemove)="onCustomerRemove()"
-        [(value)]="customerQuery"
+        [footerButtonText]="'Add New Company'"
+        [source]="companySource"
+        (onRemove)="onCompanyRemove()"
+        [(value)]="companyQuery"
         [itemTemplate]="customItemTemplate"
-        (onSelect)="onCustomerSelect($event)"
-        (onFooterButtonClick)="onAddNewCustomer()"
+        (onSelect)="onCompanySelect($event)"
+        (onFooterButtonClick)="onAddNewCompany()"
         [optionField]="'name'">
       </bd-typeahead>
     </bd-validator>
-    <customer-form *ngIf='load.customer' [isNestedForm]="true" [submitButtonText]="'Add Customer'" [customer]='load.customer' (save)="onCustomerSave($event)" (cancel)="onCustomerEditCancel()" [viewMode]="customerViewMode"> </customer-form>
+    <company-form *ngIf='load.company' [isNestedForm]="true" [submitButtonText]="'Add Company'" [company]='load.company' (save)="onCompanySave($event)" (cancel)="onCompanyEditCancel()" [viewMode]="companyViewMode"> </company-form>
     <bd-form-section>
       <bd-dropdown
-        *ngIf='load.customer'
+        *ngIf='load.company'
         class="bd-form-control"
         labelText='Address'
         clearLabel='Leave Empty'
         formControlName="addressId"
         defaultTitleText="Select address"
         [dropdownItemTemplate]="addressDropdown"
-        [items]="load.customer.addresses"
+        [items]="load.company.addresses"
         keyField="id"
         valueField="name">
       </bd-dropdown>
     </bd-form-section>
     <bd-form-section>
       <bd-dropdown
-        *ngIf='load.customer'
+        *ngIf='load.company'
         clearLabel='Leave Empty'
         class="bd-form-control"
         labelText='Billing Address'
         formControlName="billingAddressId"
         defaultTitleText="Select Billing Address"
         [dropdownItemTemplate]="addressDropdown"
-        [items]="load.customer.addresses"
+        [items]="load.company.addresses"
         keyField="id"
         valueField="name">
       </bd-dropdown>
     </bd-form-section>
     <bd-form-section>
       <bd-dropdown
-        *ngIf='load.customer'
+        *ngIf='load.company'
         clearLabel='Leave Empty'
         class="bd-form-control"
         labelText='Contact'
         defaultTitleText="Select Contact"
         formControlName="contactId"
-        [items]="load.customer.contacts"
+        [items]="load.company.contacts"
         keyField="id"
         valueField="firstName">
       </bd-dropdown>
