--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -36,7 +36,7 @@
       font-weight: bold;
     }
 
-    .customer-name {
+    .company-name {
       overflow: hidden;
       color: $blue;
       margin-right: 20px;
