FSPA-312 #comment update fe model

--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -10,7 +10,7 @@
       <div class="loads-container">
         <div *ngFor="let load of company.loads" class="load">
           <span [style.background]="loadStatusColor(load.status)" class="load-circle"></span>
-          <span class="load-name">LD{{load.systemLoadNumber}}</span>
+          <span class="load-name">LD{{load.systemLoadNo}}</span>
         </div>
       </div>
     </div>
