FSPA-312 #comment update fe model, code refactoring

--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -48,8 +48,8 @@
 		</div>
 		<div class="right-side bottom-border">
 			<google-map
-				[lng]="_map.lng"
-        [lat]="_map.lat"
+				[longitude]="_map.longitude"
+        [latitude]="_map.latitude"
 				[info]="_map.labelText">
 			</google-map>
 		</div>
