FSPA-312 #comment code refactoring

--- a/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
@@ -1,7 +1,7 @@
 <div class="trip-popover">
    <span>TR{{trip.number}}</span>
    <div>
-    <span>{{trip.driverTeams.drivers[0].firstName}} {{trip.driverTeams.drivers[0].lastName}}</span>
+    <span>{{trip.driverTeams[0].drivers[0].firstName}} {{trip.driverTeams[0].drivers[0].lastName}}</span>
     |
     <span>Tk{{trip.truckEquipment.number}}</span>
     |
