--- a/src/app/loads/components/load-stop-card/components/company-popover/company-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/company-popover/company-popover.component.html
@@ -5,13 +5,13 @@
   </div>
   <div class="section">
     <span class="blue">Address</span>
-    <span>{{company.addresses[0].streetAddress}}</span>
+    <span>{{company.addresses[0].streetAddress1}}</span>
     <span>{{company.addresses[0].city}}, {{company.addresses[0].state}}</span>
     <span>{{company.addresses[0].zip}}</span>
   </div>
   <div class="section">
     <span class="blue">Billing Address</span>
-    <span>{{company.addresses[1].streetAddress}}</span>
+    <span>{{company.addresses[1].streetAddress1}}</span>
     <span>{{company.addresses[1].city}}, {{company.addresses[1].state}}</span>
     <span>{{company.addresses[1].zip}}</span>
   </div>
