--- a/src/app/shared/components/templates/address-item/address-item-template.html
+++ b/src/app/shared/components/templates/address-item/address-item-template.html
@@ -4,8 +4,8 @@
       {{item.name}}
     </div>
     <div class="properties">
-      {{item.streetAddress}}
-      {{item.secondStreetAddress}}
+      {{item.streetAddress1}}
+      {{item.streetAddress2}}
       {{item.city}}
       {{item.state}}
       {{item.zip}}
