--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -12,7 +12,7 @@
 </bd-validator>
 <bd-typeahead
 	class="bd-form-control"
-	formControlName="streetAddress"
+	formControlName="streetAddress1"
 	placeholder="Street address 1"
   [source]="_placeSource"
   [(value)]="_placeQuery"
@@ -27,7 +27,7 @@
 			<bd-input
 				class="bd-form-control left-control"
 				placeholder="Street address 2"
-				formControlName="secondStreetAddress">
+				formControlName="streetAddress2">
 			</bd-input>
 			<bd-input class="bd-form-control left-control" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
 			</bd-input>
