FSPA-312 fix stop model

--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -18,8 +18,8 @@
   </div>
   <div class="right" *ngIf="this.load.stops.length > 1">
     <div class="distance-wrapper">
-      <span>{{firstStop.address.city}}, {{firstStop.address.state}}</span>
-      <span>{{lastStop.address.city}}, {{lastStop.address.state}}</span>
+      <span>{{firstStop.facility.address.city}}, {{firstStop.facility.address.state}}</span>
+      <span>{{lastStop.facility.address.city}}, {{lastStop.facility.address.state}}</span>
     </div>
     <div class="schedule-date-wrapper">
       <div class="start-date">
