--- a/src/app/shared/components/stops-line/components/stop-popover/stop-popover.component.html
+++ b/src/app/shared/components/stops-line/components/stop-popover/stop-popover.component.html
@@ -5,9 +5,9 @@
   </div>
   <div class="section">
     <span class="blue">{{stop.facility.name}}</span>
-    <span>{{stop.address.streetAddress1}}</span>
-    <span>{{stop.address.city}}, {{stop.address.state}}</span>
-    <span>{{stop.address.zip}}</span>
+    <span>{{stop.facility.address.streetAddress1}}</span>
+    <span>{{stop.facility.address.city}}, {{stop.facility.address.state}}</span>
+    <span>{{stop.facility.address.zip}}</span>
   </div>
   <div class="section">
     <span>{{phone}}</span>
