--- a/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.scss
+++ b/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.scss
@@ -11,6 +11,13 @@
     @include multi-line-ellipsis($line-height: 18px, $line-count: 1, $bg-color: $white);
   }
 
+  &.active,
+  &:hover {
+    .message {
+      @include multi-line-ellipsis($line-height: 18px, $line-count: 1, $bg-color: $light-blue);
+    }
+  }
+
   &.closable {
 
     .message {
