FSPA-138 remove odd argument in mixin

--- a/src/app/drivers/components/driver-card/driver-card.component.scss
+++ b/src/app/drivers/components/driver-card/driver-card.component.scss
@@ -76,7 +76,7 @@
       }
 
       .tr-city-name {
-        @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $white);
+        @include multi-line-ellipsis($line-height: 17px, $line-count: 2);
         width: 80%;
         text-align: left;
       }
@@ -111,7 +111,7 @@
     .right {
       .tr-city {
         .tr-city-name {
-          @include multi-line-ellipsis($line-height: 17px, $line-count: 2, $bg-color: $light-blue);
+          @include multi-line-ellipsis($line-height: 17px, $line-count: 2);
           width: 80%;
           text-align: left;
         }
