--- a/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.scss
+++ b/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.scss
@@ -8,20 +8,20 @@
   }
 
   .message {
-    @include multi-line-ellipsis($line-height: 18px, $line-count: 1, $bg-color: $white);
+    @include multi-line-ellipsis($line-height: 18px, $line-count: 1);
   }
 
   &.active,
   &:hover {
     .message {
-      @include multi-line-ellipsis($line-height: 18px, $line-count: 1, $bg-color: $light-blue);
+      @include multi-line-ellipsis($line-height: 18px, $line-count: 1);
     }
   }
 
   &.closable {
 
     .message {
-      @include multi-line-ellipsis($line-height: 18px, $line-count: 2, $bg-color: $closable-card-ellipsis);
+      @include multi-line-ellipsis($line-height: 18px, $line-count: 2);
       background: inherit;
       color: $white;
       margin-top: -4px;
