FSPA-332 add mc test, review test issue

--- a/src/app/customers/components/customer-card/customer-card.component.html
+++ b/src/app/customers/components/customer-card/customer-card.component.html
@@ -23,7 +23,7 @@ class="customer-card-section"
   <div class="bottom">
     <div class="left">
       <div class="customer-name">{{customer.name}}</div>
-      <div>MC# {{customer.mc}}</div>
+      <div class="customer-mc">MC# {{customer.mc}}</div>
     </div>
     <div class="middle">
       <div class="position">{{customer.contacts[0].position}}</div>
